--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "carpooling",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,17 +15,19 @@
     "@react-native-firebase/messaging": "^16.5.0",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
-    "expo": "^47.0.0",
+    "expo": "~47.0.14",
     "expo-constants": "~14.0.2",
     "expo-dev-client": "~2.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-radio-buttons-group": "^2.2.11",
