--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-firebase/messaging": "^16.5.0",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~47.0.14",
     "expo-constants": "~14.0.2",
     "expo-dev-client": "~2.0.1",
