--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-radio-buttons-group": "^2.2.11",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-navigation": "^4.4.4",
