--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-firebase/firestore": "^16.5.0",
     "@react-native-firebase/messaging": "^16.5.0",
+    "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
     "@rneui/base": "^4.0.0-rc.7",
